spade-tests/src/snapshots/spade_tests__parser__unterminated_block_comment_is_error.snap
---
source: spade-tests/src/parser.rs
---
/*/**/

error: Unterminated block comment
  ┌─ testinput:1:1
  │
1 │ /*/**/
  │ ^-
  │ │
  │ to close this block comment
  │ Expected */


