spade-tests/src/snapshots/spade_tests__parser__wal_trace_does_not_accept_duplicate_clk.snap
---
source: spade-tests/src/parser.rs
---
#[wal_trace(clk=x, clk=x)]
struct T {}


error: clk specified more than once
  ┌─ testinput:1:20
  │
1 │ #[wal_trace(clk=x, clk=x)]
  │                 -  ^^^ Specified multiple times
  │                 │   
  │                 Previously specified here


